feat: refactoring and tests